@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include Mapper.puml
!include ToDTOMapper.puml
!include LongIdMapper.puml
!include ImageMapper.puml
!include StringNameMapper.puml
!include DescriptionMapper.puml
!include DifficultyToDifficultyDTOMapper.puml
!include CategoryToCategoryDTOMapper.puml
!include IngredientToIngredientDTOMapper.puml
!include ServingsMapper.puml
!include CookingTimeMapper.puml
!include InstructionsMapper.puml
!include LongVersionMapper.puml

interface RecipeToRecipeDTOMapper extends Mapper, ToDTOMapper {
    + void map(Recipe source, RecipeDTO target)
    + RecipeDTO mapToDTO(Recipe recipe)
}

class SimpleRecipeToRecipeDTOMapper implements RecipeToRecipeDTOMapper {
    - LongIdMapper longIdMapper
    - ImageMapper imageMapper
    - StringNameMapper stringNameMapper
    - DescriptionMapper descriptionMapper
    - DifficultyToDifficultyDTOMapper difficultyToDifficultyDTOMapper
    - CategoryToCategoryDTOMapper categoryToCategoryDTOMapper
    - IngredientToIngredientDTOMapper ingredientToIngredientDTOMapper
    - ServingsMapper servingsMapper
    - CookingTimeMapper cookingTimeMapper
    - InstructionsMapper instructionsMapper
    - LongVersionMapper longVersionMapper

    + RecipeDTO mapToDTO(Recipe recipe)
    + void map(Recipe recipe, RecipeDTO recipeDTO)
    - void mapId(Recipe recipe, RecipeDTO recipeDTO)
    - void mapImage(Recipe recipe, RecipeDTO recipeDTO)
    - void mapName(Recipe recipe, RecipeDTO recipeDTO)
    - void mapDescription(Recipe recipe, RecipeDTO recipeDTO)
    - void mapDifficultyToDifficultyDTO(Recipe recipe, RecipeDTO recipeDTO)
    - void mapCategoriesToCategoryDTOs(Recipe recipe, RecipeDTO recipeDTO)
    - void mapIngredientsToIngredientDTOs(Recipe recipe, RecipeDTO recipeDTO)
    - void mapServings(Recipe recipe, RecipeDTO recipeDTO)
    - void mapCookingTime(Recipe recipe, RecipeDTO recipeDTO)
    - void mapInstructions(Recipe recipe, RecipeDTO recipeDTO)
    - void mapVersion(Recipe recipe, RecipeDTO recipeDTO)
}

SimpleRecipeToRecipeDTOMapper --> LongIdMapper
SimpleRecipeToRecipeDTOMapper --> ImageMapper
SimpleRecipeToRecipeDTOMapper --> StringNameMapper
SimpleRecipeToRecipeDTOMapper --> DescriptionMapper
SimpleRecipeToRecipeDTOMapper --> DifficultyToDifficultyDTOMapper
SimpleRecipeToRecipeDTOMapper --> CategoryToCategoryDTOMapper
SimpleRecipeToRecipeDTOMapper --> IngredientToIngredientDTOMapper
SimpleRecipeToRecipeDTOMapper --> ServingsMapper
SimpleRecipeToRecipeDTOMapper --> CookingTimeMapper
SimpleRecipeToRecipeDTOMapper --> InstructionsMapper
SimpleRecipeToRecipeDTOMapper --> LongVersionMapper
@enduml